Increase scrollbar size. Resolves #66
Modify table scrollbar size for webkit-based browsers

--- a/css/styles.css
+++ b/css/styles.css
@@ -444,7 +444,6 @@ input[type=number] {
   margin: 0px auto;
   box-sizing: border-box;
   overflow-x: auto;
-  scrollbar-width: thin;
 }
 
 @media only screen and (max-width: 1440px) and (pointer: fine) {
@@ -454,28 +453,28 @@ input[type=number] {
 }
 
 .table-wrapper::-webkit-scrollbar {
-  height: 8px;
-  width: 5px;
+  height: 2rem;
+  width: 1rem;
 }
 
 .table-wrapper::-webkit-scrollbar-track {
-  height: 8px;
-  width: 5px;
+  height: 2rem;
+  width: 1rem;
   box-shadow: inset 0 0 6px var(--shadow-20);
   -webkit-box-shadow: inset 0 0 6px var(--shadow-20);
 }
 
 .table-wrapper::-webkit-scrollbar-thumb {
-  height: 8px;
-  width: 5px;
+  height: 2rem;
+  width: 1rem;
   background: var(--shadow-20);
   box-shadow: inset 0 0 6px var(--shadow-20);
   -webkit-box-shadow: inset 0 0 6px var(--shadow-10);
 }
 
 .table-wrapper::-webkit-scrollbar-thumb:window-inactive {
-  height: 8px;
-  width: 5px;
+  height: 2rem;
+  width: 1rem;
   background: var(--shadow-20);
 }
 
